mt7603: fix LED support (copy CFLAGS from main Makefile)
Signed-off-by: Felix Fietkau <nbd@nbd.name>

--- a/mt7603/Makefile
+++ b/mt7603/Makefile
@@ -1,3 +1,5 @@
+EXTRA_CFLAGS += -Werror -DCONFIG_MT76_LEDS
+
 CHECK_CC_ENUM_FLAGS = $(NOSTDINC_FLAGS) $(LINUXINCLUDE) $(KBUILD_CPPFLAGS) $(KBUILD_CFLAGS)
 check-cc-enum = $(call try-run, echo "int v = $(1);" | $(CC) -Werror $(CHECK_CC_ENUM_FLAGS) $(2) -c -x c - -o "$$TMP",y,n)
 
